# Allie-SDK

./: .gitignore  AGENTS.md  README.md  plan-addOAuthAuthenticationSupport.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-tests.yml  renovate.yaml
allie_sdk/: __init__.py  alation.py
allie_sdk/core/: async_handler.py  custom_exceptions.py  data_structures.py  logs.py  request_handler.py
allie_sdk/methods/: __init__.py  authentication.py  bi_source.py  business_policy.py  cdm_authentication.py  connector.py  custom_field.py  custom_template.py  data_dictionary.py  data_quality.py  dataflow.py  datasource.py  document.py  document_hub_folder.py  domain.py  glossary_term.py  group.py  job.py  oauth2.py  otype.py  policy_group.py  query.py  rdbms.py  tag.py  trust_check.py  user.py  virtual_datasource.py  virtual_filesystem.py  visual_config.py
allie_sdk/models/: __init__.py  authentication_model.py  bi_source_model.py  business_policy_model.py  cdm_authentication_model.py  connector_model.py  custom_field_model.py  custom_template_model.py  data_dictionary_model.py  data_quality_model.py  dataflow_model.py  datasource_model.py  document_hub_folder_model.py  document_model.py  domain_model.py  glossary_term_model.py  group_model.py  job_model.py  oauth2_model.py  otype_model.py  policy_group_model.py  query_model.py  rdbms_model.py  tag_model.py  trust_check_model.py  user_model.py  virtual_datasource_model.py  virtual_filesystem_model.py  visual_config_model.py
docs/: _config.yml  index.md
docs/_includes/: footer_custom.html  toc_heading_custom.html
docs/pages/: Authenticate.md  Contribute.md  Errors.md  Logging.md  Support.md  Versions.md
example_errors/: README.md  config.ini.sample
example_errors/authentication/: authentication_invalid_refresh_token.py  authentication_oauth_errors.py
example_errors/bi_server/: create_bi_server_validation.py
example_errors/cdm_authentication/: cdm_authentication_invalid_token.py
example_errors/custom_field/: post_custom_field_api_endpoint_validation.py  post_custom_field_data_class_validation.py  (+2 more)
examples/: .gitignore  README.md  config.ini.sample  config_examples.ini  example_authentication.py  example_bi_source.py  example_business_policy.py  example_cdm_authentication.py  example_connector.py  example_custom_field.py  example_custom_field_value.py  example_custom_template.py  example_data_dictionary.py  example_data_quality.py  example_data_source.py  example_dataflow.py  example_datasource.py  example_document.py  example_document_hub_folder.py  example_documents.py  example_domain.py  example_glossary_terms.py  example_group.py  example_otype.py  example_policy.py  example_policy_group.py  example_query.py  example_rdbms.py  example_tag.py  example_trust_check.py  example_user.py  example_virtual_datasource.py  example_virtual_filesystem.py  example_visual_config.py  fastmcp_client.py  fastmcp_server.py
requests_mock/: __init__.py
(+103 files in other folders)
