[project]
name = "allie-sdk"
description = "A Python library for the Alation REST APIs."
version = "2.2.0"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["Alation", "Allie SDK", "Alation Python SDK", "Alation SDK"]
authors = [
  { name="Mario Aburto", email="mario.aburto@alation.com"},
  { name="Diethard Steiner", email="diethard.steiner@alation.com"},
  { name="Jon Lanham", email="jon.lanham@alation.com"},
  { name="Radek Ignaszewski", email="radek.ignaszewski@alation.com"},
]
maintainers = [
  { name="Mario Aburto", email="mario.aburto@alation.com"},
  { name="Diethard Steiner", email="diethard.steiner@alation.com"},
  { name="Jon Lanham", email="jon.lanham@alation.com"},
  { name="Radek Ignaszewski", email="radek.ignaszewski@alation.com"},
]

dependencies = [
  "requests>=2.32.0",
  "python-json-logger>=2.0.4",
  "python-dateutil>=2.8.2"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "requests-mock>=1.12.1",
]

[project.urls]
Homepage = "https://github.com/Alation/Allie-SDK"
Issues = "https://github.com/Alation/Allie-SDK/issues"
Documentation = "https://alation.github.io/Allie-SDK/"

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# do not run implicit builds (e.g. when calling uv sync)
package = false

[tool.uv.build-backend]
module-name = "allie_sdk"
module-root = ""